--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
 .vscode
 .idea
 unsolved
+
+# Cargo project in root directory to run cargo with [[bin]] to run single files
+Cargo.toml
+Cargo.lock
+/target
